--- a/index.html
+++ b/index.html
@@ -94,5 +94,42 @@
             rel="stylesheet"
         />
     </head>
-    <body></body>
+    <body style="height: 8000px">
+        <header class="header header--fixed">
+            <div class="container">
+                <div class="header-top">
+                    <a href="#!">
+                        <img
+                            src="./assets/icon/logo.svg"
+                            alt=""
+                            class="header__logo"
+                        />
+                    </a>
+                    <div class="header-nav">
+                        <ul class="header__list">
+                            <li class="header__item">
+                                <a
+                                    href="#!"
+                                    class="header__item-link header__link--home"
+                                    >Home</a
+                                >
+                            </li>
+                            <li class="header__item">
+                                <a href="#!" class="header__item-link">About</a>
+                            </li>
+                            <li class="header__item">
+                                <a href="#!" class="header__item-link">Blog</a>
+                            </li>
+                            <li class="header__item">
+                                <a href="#!" class="header__item-link"
+                                    >Contact</a
+                                >
+                            </li>
+                        </ul>
+                        <a href="#!" class="btn header__btn">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </body>
 </html>
