--- a/index.html
+++ b/index.html
@@ -131,5 +131,85 @@
                 </div>
             </div>
         </header>
+        <div class="main">
+            <div class="container">
+                <div class="hero">
+                    <div class="hero-body">
+                        <section class="hero-content">
+                            <h2 class="section__heading hero__heading">
+                                We’re a creative design agency.
+                            </h2>
+                            <p class="section__desc hero__desc">
+                                A brilliant, modular agency template for
+                                startup’s build yours toady.
+                            </p>
+                            <div class="hero-media">
+                                <div class="btn">Get in touch</div>
+                                <a href="#!" class="hero-play">
+                                    <img
+                                        src="./assets/icon/hero-play.svg"
+                                        alt=""
+                                        class="hero-play__btn"
+                                    />
+                                </a>
+                            </div>
+                        </section>
+                        <div>
+                            <div class="hero__image">
+                                <a href="#!" class="hero__link-img">
+                                    <img
+                                        src="./assets/image/hero-1.png"
+                                        alt=""
+                                        class="hero__img"
+                                    />
+                                </a>
+                                <a href="#!" class="hero__link-img">
+                                    <img
+                                        src="./assets/image/hero-2.png"
+                                        alt=""
+                                        class="hero__img hero__img--center"
+                                    />
+                                </a>
+                                <a href="#!" class="hero__link-img">
+                                    <img
+                                        src="./assets/image/hero-3.png"
+                                        alt=""
+                                        class="hero__img"
+                                    />
+                                </a>
+                                <div class="hero-bg"></div>
+                                <div class="hero-decor">
+                                    <div class="hero-decor__top">
+                                        <img
+                                            src="./assets/icon/snow-1.svg"
+                                            alt=""
+                                            class="hero-snow--1"
+                                        />
+                                        <img
+                                            src="./assets/icon/string-1.svg"
+                                            alt=""
+                                            class="hero-string--1"
+                                        />
+                                    </div>
+
+                                    <div class="hero-decor__bottom">
+                                        <img
+                                            src="./assets/icon/string-2.svg"
+                                            alt=""
+                                            class="hero-string--2"
+                                        />
+                                        <img
+                                            src="./assets/icon/snow-2.svg"
+                                            alt=""
+                                            class="hero-snow--2"
+                                        />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
