Làm phần partner

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     </head>
     <body style="height: 8000px">
         <header class="header header--fixed">
+            <!-- Header -->
             <div class="container">
                 <div class="header-top">
                     <a href="#!">
@@ -133,6 +134,7 @@
         </header>
         <div class="main">
             <div class="container">
+                <!-- Hero -->
                 <div class="hero">
                     <div class="hero-body">
                         <section class="hero-content">
@@ -208,6 +210,60 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <!-- Partner -->
+                <div class="partner">
+                    <ul class="partner__list">
+                        <div class="partner__list">
+                            <a href="" class="partner__link">
+                                <img
+                                    src="./assets/icon/google.svg"
+                                    alt=""
+                                    class="partner__img"
+                                />
+                                <img src="" alt="" class="partner__img-name" />
+                            </a>
+                            <a href="" class="partner__link">
+                                <img
+                                    src="./assets/icon/slack.svg"
+                                    alt=""
+                                    class="partner__img"
+                                />
+                            </a>
+                            <a href="" class="partner__link">
+                                <img
+                                    src="./assets/icon/agworld.svg"
+                                    alt=""
+                                    class="partner__img"
+                                />
+                                <img
+                                    src="./assets/icon/agworld-name.svg"
+                                    alt=""
+                                    class="partner__img-name"
+                                />
+                            </a>
+                            <a href="" class="partner__link">
+                                <img
+                                    src="./assets/icon/riotinto.svg"
+                                    alt=""
+                                    class="partner__img"
+                                />
+                            </a>
+                            <a href="" class="partner__link">
+                                <img
+                                    src="./assets/icon/heroku.svg"
+                                    alt=""
+                                    class="partner__img"
+                                />
+                                <img
+                                    src="./assets/icon/heroku-name.svg"
+                                    alt=""
+                                    class="partner__img-name"
+                                />
+                            </a>
+                        </div>
+                    </ul>
                 </div>
             </div>
         </div>
