Làm phần services

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     </head>
     <body style="height: 8000px">
         <header class="header header--fixed">
-            <!-- Header -->
             <div class="container">
+                <!-- Header -->
                 <div class="header-top">
                     <a href="#!">
                         <img
@@ -132,85 +132,87 @@
                 </div>
             </div>
         </header>
-        <div class="main">
-            <div class="container">
-                <!-- Hero -->
-                <div class="hero">
-                    <div class="hero-body">
-                        <section class="hero-content">
-                            <h2 class="section__heading hero__heading">
-                                We’re a creative design agency.
-                            </h2>
-                            <p class="section__desc hero__desc">
-                                A brilliant, modular agency template for
-                                startup’s build yours toady.
-                            </p>
-                            <div class="hero-media">
-                                <div class="btn">Get in touch</div>
-                                <a href="#!" class="hero-play">
+        <div class="container">
+            <div class="hero">
+                <div class="hero-body">
+                    <section class="hero-content">
+                        <h2 class="section__heading hero__heading">
+                            We’re a creative design agency.
+                        </h2>
+                        <p class="section__desc hero__desc">
+                            A brilliant, modular agency template for startup’s
+                            build yours toady.
+                        </p>
+                        <div class="hero-media">
+                            <div class="btn">Get in touch</div>
+                            <a href="#!" class="hero-play">
+                                <img
+                                    src="./assets/icon/hero-play.svg"
+                                    alt=""
+                                    class="hero-play__btn"
+                                />
+                            </a>
+                        </div>
+                    </section>
+                    <div>
+                        <div class="hero__image">
+                            <a href="#!" class="hero__link-img">
+                                <img
+                                    src="./assets/image/hero-1.png"
+                                    alt=""
+                                    class="hero__img"
+                                />
+                            </a>
+                            <a href="#!" class="hero__link-img">
+                                <img
+                                    src="./assets/image/hero-2.png"
+                                    alt=""
+                                    class="hero__img hero__img--center"
+                                />
+                            </a>
+                            <a href="#!" class="hero__link-img">
+                                <img
+                                    src="./assets/image/hero-3.png"
+                                    alt=""
+                                    class="hero__img"
+                                />
+                            </a>
+                            <div class="hero-bg"></div>
+                            <div class="hero-decor">
+                                <div class="hero-decor__top">
                                     <img
-                                        src="./assets/icon/hero-play.svg"
+                                        src="./assets/icon/snow-1.svg"
                                         alt=""
-                                        class="hero-play__btn"
+                                        class="hero-snow--1"
                                     />
-                                </a>
-                            </div>
-                        </section>
-                        <div>
-                            <div class="hero__image">
-                                <a href="#!" class="hero__link-img">
                                     <img
-                                        src="./assets/image/hero-1.png"
+                                        src="./assets/icon/string-1.svg"
                                         alt=""
-                                        class="hero__img"
+                                        class="hero-string--1"
                                     />
-                                </a>
-                                <a href="#!" class="hero__link-img">
-                                    <img
-                                        src="./assets/image/hero-2.png"
-                                        alt=""
-                                        class="hero__img hero__img--center"
-                                    />
-                                </a>
-                                <a href="#!" class="hero__link-img">
-                                    <img
-                                        src="./assets/image/hero-3.png"
-                                        alt=""
-                                        class="hero__img"
-                                    />
-                                </a>
-                                <div class="hero-bg"></div>
-                                <div class="hero-decor">
-                                    <div class="hero-decor__top">
-                                        <img
-                                            src="./assets/icon/snow-1.svg"
-                                            alt=""
-                                            class="hero-snow--1"
-                                        />
-                                        <img
-                                            src="./assets/icon/string-1.svg"
-                                            alt=""
-                                            class="hero-string--1"
-                                        />
-                                    </div>
+                                </div>
 
-                                    <div class="hero-decor__bottom">
-                                        <img
-                                            src="./assets/icon/string-2.svg"
-                                            alt=""
-                                            class="hero-string--2"
-                                        />
-                                        <img
-                                            src="./assets/icon/snow-2.svg"
-                                            alt=""
-                                            class="hero-snow--2"
-                                        />
-                                    </div>
+                                <div class="hero-decor__bottom">
+                                    <img
+                                        src="./assets/icon/string-2.svg"
+                                        alt=""
+                                        class="hero-string--2"
+                                    />
+                                    <img
+                                        src="./assets/icon/snow-2.svg"
+                                        alt=""
+                                        class="hero-snow--2"
+                                    />
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="main">
+            <div class="container">
+                <!-- Hero -->
 
                 <!-- Partner -->
                 <div class="partner">
@@ -265,6 +267,121 @@
                         </div>
                     </ul>
                 </div>
+
+                <!-- Services -->
+                <div class="services">
+                    <div class="services__top">
+                        <div class="services__top-content">
+                            <p class="services__title">OUR SERVICES</p>
+                            <div class="services__top-info">
+                                <h2 class="services__heading">
+                                    We offer a wide range of design services
+                                </h2>
+                                <div class="services-move">
+                                    <a href="#!" class="services-move__link">
+                                        <svg
+                                            class="services-move__btn"
+                                            width="22"
+                                            height="13"
+                                            viewBox="0 0 22 13"
+                                            fill="none"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M21 6.82353H0.999999M0.999999 6.82353L6.29412 1M0.999999 6.82353L6.29412 12"
+                                                stroke="currentColor"
+                                                stroke-width="1.5"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </a>
+                                    <a href="#!" class="services-move__link">
+                                        <svg
+                                            class="services-move__btn services-move__btn--right"
+                                            width="22"
+                                            height="13"
+                                            viewBox="0 0 22 13"
+                                            fill="none"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                                d="M21 6.82353H0.999999M0.999999 6.82353L6.29412 1M0.999999 6.82353L6.29412 12"
+                                                stroke="currentColor"
+                                                stroke-width="1.5"
+                                                stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                            />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="services__content">
+                        <ul class="services__list">
+                            <li class="services__item">
+                                <a href="#!" class="services__link">
+                                    <img
+                                        src="./assets/image/services-1.png"
+                                        alt=""
+                                        class="services__img"
+                                    />
+                                </a>
+                                <div class="services__item-info">
+                                    <h3 class="services__item-heading">
+                                        Branding
+                                    </h3>
+                                    <p class="services__item-desc">
+                                        Create beautiful Agency website with
+                                        Boluethat converts more visitors than
+                                        any website.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="services__item">
+                                <a href="#!" class="services__link">
+                                    <img
+                                        src="./assets/image/services-2.png"
+                                        alt=""
+                                        class="services__img"
+                                    />
+                                </a>
+                                <div class="services__item-info">
+                                    <h3 class="services__item-heading">
+                                        Web Design
+                                    </h3>
+                                    <p class="services__item-desc">
+                                        Create beautiful Agency website with
+                                        Boluethat converts more visitors than
+                                        any website.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="services__item">
+                                <a href="#!" class="services__link">
+                                    <img
+                                        src="./assets/image/services-3.png"
+                                        alt=""
+                                        class="services__img"
+                                    />
+                                </a>
+                                <div class="services__item-info">
+                                    <h3 class="services__item-heading">
+                                        Graphic Design
+                                    </h3>
+                                    <p class="services__item-desc">
+                                        Create beautiful Agency website with
+                                        Boluethat converts more visitors than
+                                        any website.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- About -->
             </div>
         </div>
     </body>
