--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             </div>
         </header>
         <div class="container">
+            <!-- Hero -->
             <div class="hero">
                 <div class="hero-body">
                     <section class="hero-content">
@@ -212,8 +213,6 @@
         </div>
         <div class="main">
             <div class="container">
-                <!-- Hero -->
-
                 <!-- Partner -->
                 <div class="partner">
                     <ul class="partner__list">
@@ -272,7 +271,7 @@
                 <div class="services">
                     <div class="services__top">
                         <div class="services__top-content">
-                            <p class="services__title">OUR SERVICES</p>
+                            <p class="title-dash">OUR SERVICES</p>
                             <div class="services__top-info">
                                 <h2 class="services__heading">
                                     We offer a wide range of design services
@@ -382,6 +381,74 @@
                 </div>
 
                 <!-- About -->
+                <div class="about">
+                    <div class="about-body">
+                        <div class="about-image">
+                            <div class="about-image__decor">
+                                <img
+                                    src="./assets/icon/snow-1.svg"
+                                    alt=""
+                                    class="about-snow--1"
+                                />
+                                <img
+                                    src="./assets/icon/string-1.svg"
+                                    alt=""
+                                    class="about-string--1"
+                                />
+                            </div>
+                            <div class="about-image__blur"></div>
+                            <div
+                                class="about-image__link about-image__link--bottom"
+                            >
+                                <img
+                                    src="./assets/image/about-1.jpg"
+                                    alt=""
+                                    class="about-image__img"
+                                />
+                            </div>
+                            <div class="about-image__link">
+                                <img
+                                    src="./assets/image/about-2.jpg"
+                                    alt=""
+                                    class="about-image__img about-image__link--stat"
+                                />
+                                <img
+                                    src="./assets/image/services-stat.png"
+                                    alt=""
+                                    class="about-img__stat"
+                                />
+                            </div>
+                        </div>
+                        <div class="about-content">
+                            <p class="title-dash">ABOUT US</p>
+                            <h2 class="about__heading">
+                                We are an extention of your creative team
+                            </h2>
+                            <p class="about__desc">
+                                At the start of every project, we cusomizea
+                                detailed project plan together with you set
+                                exectationns ensure alighment and define key
+                                milestones and deiverbles.
+                            </p>
+                            <div class="about-count">
+                                <h3 class="about-count__number">48%</h3>
+                                <p class="about-count__desc">
+                                    Are you strive for two things in design
+                                    simplicity and clarity. Great design is born
+                                    of those two things
+                                </p>
+                            </div>
+                            <div class="about-count">
+                                <h3 class="about-count__number">26%</h3>
+                                <p class="about-count__desc">
+                                    Are you strive for two things in design
+                                    simplicity and clarity. Great design is born
+                                    of those two things
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
