Làm phần process

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         <div class="services__top-content">
                             <p class="title-dash">OUR SERVICES</p>
                             <div class="services__top-info">
-                                <h2 class="services__heading">
+                                <h2 class="services__heading heading-dash">
                                     We offer a wide range of design services
                                 </h2>
                                 <div class="services-move">
@@ -444,6 +444,56 @@
                                     Are you strive for two things in design
                                     simplicity and clarity. Great design is born
                                     of those two things
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Process -->
+                <div class="process">
+                    <p class="title-dash">OUR PROCESS</p>
+                    <h2 class="heading-dash">
+                        A simple ,yet effective three step process
+                    </h2>
+                    <div class="process-content">
+                        <div class="process-list">
+                            <div class="process-item">
+                                <img
+                                    src="./assets/image/process.png"
+                                    alt=""
+                                    class="process__img"
+                                />
+                                <span class="process-item__number">01.</span>
+                                <div class="process-info">
+                                    <h3 class="process-info__heading">
+                                        Project idea
+                                    </h3>
+                                    <a href="#!" class="process-info__link"
+                                        >Learn More</a
+                                    >
+                                </div>
+                            </div>
+                            <div class="process-item">
+                                <span class="process-item__number">02.</span>
+                                <h3 class="process-info__heading">
+                                    Brainstormaing
+                                </h3>
+                                <p class="process-info__desc">
+                                    We customse a ensure aligment and difine key
+                                    mileones and defiverables experience tells
+                                    us the best solutions are the ones deated
+                                    with clients.
+                                </p>
+                            </div>
+                            <div class="process-item">
+                                <span class="process-item__number">03.</span>
+                                <h3 class="process-info__heading">Execution</h3>
+                                <p class="process-info__desc">
+                                    We customse a ensure aligment and difine key
+                                    mileones and defiverables experience tells
+                                    us the best solutions are the ones deated
+                                    with clients.
                                 </p>
                             </div>
                         </div>
