Làm phần perform

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                 <!-- Process -->
                 <div class="process">
                     <p class="title-dash">OUR PROCESS</p>
-                    <h2 class="heading-dash">
+                    <h2 class="heading-dash process__heading">
                         A simple ,yet effective three step process
                     </h2>
                     <div class="process-content">
@@ -497,6 +497,79 @@
                                 </p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Perform -->
+            <div class="perform">
+                <div class="container">
+                    <!-- Perform top-->
+                    <div class="perform-top">
+                        <h2 class="heading-dash perform__heading">
+                            A quick glance of our past projects
+                        </h2>
+                        <div class="perform-brow">
+                            <p class="perform-brow__desc">
+                                Are you strive for the fast project simplicity
+                                and clarity. Great design is born of those two
+                                things.
+                            </p>
+                            <div class="perform-brow-cta">
+                                <a href="#!" class="perform-brow-cta__name"
+                                    >Browse all Projects</a
+                                >
+                                <a href="#!" class="perform-brow-cta__btn">
+                                    <svg
+                                        width="22"
+                                        height="12"
+                                        viewBox="0 0 22 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            id="left arrow"
+                                            d="M1 6.29415H21M21 6.29415L15.7059 1.00003M21 6.29415L15.7059 11"
+                                            stroke="#80A07B"
+                                            stroke-width="1.5"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Perform video-->
+                    <div class="perform-video">
+                        <div class="perform-decor">
+                            <img
+                                src="./assets/icon/string-3.svg"
+                                alt=""
+                                class="perform-decor__string"
+                            />
+                            <img
+                                src="./assets/icon/snow-1.svg"
+                                alt=""
+                                class="perform-decor__snow"
+                            />
+                        </div>
+                        <video
+                            class="perform-video__wrap"
+                            width="320"
+                            height="240"
+                            controls
+                        >
+                            <source
+                                src="./assets/videos/The next outbreak- Were not ready - Bill Gates - TED.mp4"
+                                type="video/mp4"
+                            />
+                            <source src="movie.ogg" type="video/ogg" />
+                        </video>
+                        <img
+                            src="./assets/icon/video-button.svg"
+                            alt=""
+                            class="perform-video__btn"
+                        />
                     </div>
                 </div>
             </div>
