--- a/index.html
+++ b/index.html
@@ -573,6 +573,70 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Feature -->
+            <div class="feature">
+                <div class="container">
+                    <div class="feature-wrap">
+                        <div class="feature-top">
+                            <h2 class="feature-top__heading">
+                                Share the features that help your customers
+                            </h2>
+                            <p class="feature-top__desc">
+                                You already know that the customer experience
+                                doesn't end with a sale — it's an ongoing work
+                                in progress that companies should be constantly
+                                seeking to improve and iterate on.
+                            </p>
+                        </div>
+                        <div class="feature-list">
+                            <div class="feature-item">
+                                <img
+                                    src="./assets/icon/blog.svg"
+                                    alt="blog"
+                                    class="feature-item__icon"
+                                />
+                                <h3 class="feature-item__heading">Blog</h3>
+                                <p class="feature-item__desc">
+                                    We’ve researched numerous agencies and
+                                    complied a list of digital marketing agency
+                                    blogs you should read to stay ahead of your
+                                    rivals and succeed online!
+                                </p>
+                            </div>
+                            <div class="feature-item">
+                                <img
+                                    src="./assets/icon/document.svg"
+                                    alt="blog"
+                                    class="feature-item__icon"
+                                />
+                                <h3 class="feature-item__heading">
+                                    Documention
+                                </h3>
+                                <p class="feature-item__desc">
+                                    In this article, we discuss the different
+                                    types of documentation, what makes for great
+                                    technical documentation, and provide
+                                    examples.
+                                </p>
+                            </div>
+                            <div class="feature-item">
+                                <img
+                                    src="./assets/icon/customer.svg"
+                                    alt="blog"
+                                    class="feature-item__icon"
+                                />
+                                <h3 class="feature-item__heading">Customers</h3>
+                                <p class="feature-item__desc">
+                                    Your customers have high expectations — and
+                                    if your business can't meet them, they're
+                                    going to leave you for your competitors.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
