--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             rel="stylesheet"
         />
     </head>
-    <body style="height: 8000px">
+    <body>
         <header class="header header--fixed">
             <div class="container">
                 <!-- Header -->
@@ -637,6 +637,90 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Blog -->
+            <div class="blog">
+                <div class="container">
+                    <!-- Blog top -->
+                    <div class="blog-top">
+                        <p class="title-dash blog-top__title">
+                            BLOG & ARTICLES
+                        </p>
+                        <div class="blog-intro">
+                            <h2 class="blog-top__heading">
+                                Take a look at our latest articles and resources
+                            </h2>
+                            <p class="blog-top__desc">
+                                The best agency are the ones ideated with
+                                clients. we corporate your ideas with memorable
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Blog list -->
+                    <div class="blog-list">
+                        <div class="blog-item">
+                            <a href="#!" class="blog-item__link">
+                                <img
+                                    src="./assets/image/blog-1.jpg"
+                                    alt=""
+                                    class="blog-item__img"
+                                />
+                            </a>
+                            <div class="blog-content">
+                                <span class="blog-item__label">STORY</span>
+                                <h3 class="blog-item__heading">
+                                    What did we learn from nunning over 100
+                                    design sprints in less the year?
+                                </h3>
+                                <span class="blog-item__date"
+                                    >JANUARY 29, 2022</span
+                                >
+                            </div>
+                        </div>
+                        <div class="blog-item">
+                            <a href="#!" class="blog-item__link">
+                                <img
+                                    src="./assets/image/blog-2.jpg"
+                                    alt=""
+                                    class="blog-item__img"
+                                />
+                            </a>
+                            <div class="blog-content">
+                                <span class="blog-item__label">STORY</span>
+                                <h3 class="blog-item__heading">
+                                    The difference between the UI/UX design a
+                                    simple guide for beginner’s
+                                </h3>
+                                <span class="blog-item__date"
+                                    >JANUARY 29, 2022</span
+                                >
+                            </div>
+                        </div>
+                        <div class="blog-item">
+                            <a href="#!" class="blog-item__link">
+                                <img
+                                    src="./assets/image/blog-3.jpg"
+                                    alt=""
+                                    class="blog-item__img"
+                                />
+                            </a>
+                            <div class="blog-content">
+                                <span class="blog-item__label">STORY</span>
+                                <h3 class="blog-item__heading">
+                                    How marketing can help your business more
+                                    than anything.
+                                </h3>
+                                <span class="blog-item__date"
+                                    >JANUARY 29, 2022</span
+                                >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
+    <footer class="footer">
+        <div class="container"></div>
+    </footer>
 </html>
